<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/setup_room_info_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/start_min_root"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/start_min_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="--:--"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="34sp" />

                <TextView
                    android:id="@+id/start_min_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/secondaryTextColor" />

                <Button
                    android:id="@+id/start_min_pick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_min_date" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/end_max_root"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/end_max_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="--:--"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="34sp" />

                <TextView
                    android:id="@+id/end_max_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/secondaryTextColor" />

                <Button
                    android:id="@+id/end_max_pick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_end_date" />
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/secondaryTextColor"
                android:text="@string/pay_type_desc"/>
            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:entries="@array/spinner_pay_types"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </androidx.appcompat.widget.AppCompatSpinner>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/full_budget_til"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/full_budget"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    app:suffixText="@string/ruble">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/full_budget_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/budget_per_hour_til"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:hint="@string/budget_per_hour"
                        android:paddingTop="8dp"
                        android:paddingEnd="8dp"
                        app:helperTextEnabled="false"
                        app:suffixText="@string/ruble">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/budget_per_hour_edittext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/budget_full_room_per_user_til"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:hint="@string/budget_full_room_per_user"
                        android:paddingStart="8dp"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        app:suffixText="@string/ruble">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/budget_full_room_per_user_edittext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </LinearLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/comment_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/comment_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:gravity="top|start"
                    android:hint="@string/add_comment_big"
                    android:inputType="textLongMessage|textAutoCorrect|textMultiLine|textImeMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/setup_room_info_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/set_room_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/loader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/half_transparent"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>